--- a/cart.html
+++ b/cart.html
@@ -59,8 +59,9 @@
                 <th>€64,85</th>
             </tr>
           </table>
-        
-          <button>Dit is correct, verder naar betaling</button>
+
+          <button><a href="payment.html">Dit is correct, verder naar betaling</a></button>
+          
         </div>
       </article>
     </div>
