--- a/product.html
+++ b/product.html
@@ -16,8 +16,21 @@
       </div>
     </div>
   </header>
+  <h2>DeveloperLand mok</h2>
   <main>
     
+    
+  
+    <div class="product2">
+  
+    <img src="images/merchandise/mok.JPG" alt="Een mok van DeveloperLand">
+
+    <p>In het kort: Een mok met jouw eigen actiefoto </br>
+    Prijs: €14,95</br>
+    Over dit product: Een mooie mok met jouw eigen foto. De opdruk is van hoge kwaliteit en laat je de lachende, huilende en van de pret schreuwende gezichten zien van iedreen in jouw achtbaan-landje. </br>
+    <button>PLaats in winkelmand(+€14,95)</button></p>
+    </div>
+  
   </main>
   <footer>
     <div class="wrapper">
